tests/parser/bug_65/test2.m.out
In test2.m, line 12
| function z = bar()
| ^^^^^^^^ error: this function must be terminated with end
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
